<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MatchMaking And Chat Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="Description">This is AppWarp Realtime Chat Demo. 
        This app describe AppWarp matchmaking benefit 
        in terms of api call and time taken. 
        User have created some rooms via apphq console and categorized room for different topics by adding properties.
        \ne.g. topic=sports
        \nUser has to select any room to start chat.
    </string>
	<string name="connectToAppwarp">Connect to AppWarp</string>
	<string name="without_matchmaking">Without Matchmaking</string>
	<string name="with_matchmaking">With Matchmaking</string>
	<string name="get_all">Get All Rooms</string>
	<string name="get_live_room_info">Get Live Room Info</string>
	<string name="joinRoom">Join Room</string>
	<string name="userName">User Name</string>
	<string name="chat">Chat</string>
	<string name="say">Say</string>
	<string name="send">Send</string>
	<string-array name="topic_arrays">
        <item>sports</item>
        <item>entertainment</item>
        <item>education</item>
        <item>books</item>
        <item>science</item>
    </string-array>
</resources>