<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/loadView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/descText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/Description" />
        
        <Button
            android:id="@+id/goBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goAhead"
            android:width="150dp"
            android:text="@string/go_ahead" />

        <Spinner
            android:id="@+id/spinnerLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/level_arrays" />
        
        <Button
            android:id="@+id/withoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onWithoutClicked"
            android:width="150dp"
            android:text="@string/without_matchmaking" />
        
        <Button
            android:id="@+id/withBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onWithClicked"
            android:width="150dp"
            android:text="@string/with_matchmaking" />

    </LinearLayout>
    
</RelativeLayout>